--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -13,7 +13,7 @@ import WorkPreview from '../components/work-preview.astro';
                     <h1>Don't be shy,<br>talk to me.</h1>
                 </div>
 
-                <form id="contact-form" method="post" action="mailer.php" role="form" novalidate="true">
+                <form id="contact-form" method="post" role="form" novalidate="true" name="contact" netlify>
                         <div class="messages"></div>
                 <div class="form controls">
                     <div class="input-half form-group">
@@ -55,13 +55,6 @@ import WorkPreview from '../components/work-preview.astro';
                         
                     </div>
                     
-                    <div class="input-full">
-                        <div class="form-group" style="margin-bottom:10px;">
-                            <div class="g-recaptcha" data-sitekey="6Ld0YI0UAAAAAM8deeF8pZaxCpeLFT8m4x064Y2A" data-callback="verifyRecaptchaCallback" data-expired-callback="expiredRecaptchaCallback"><div style="width: 304px; height: 78px;"><div><iframe title="reCAPTCHA" width="304" height="78" role="presentation" name="a-mx57041ivkf2" frameborder="0" scrolling="no" sandbox="allow-forms allow-popups allow-same-origin allow-scripts allow-top-navigation allow-modals allow-popups-to-escape-sandbox" src="https://www.google.com/recaptcha/api2/anchor?ar=1&amp;k=6Ld0YI0UAAAAAM8deeF8pZaxCpeLFT8m4x064Y2A&amp;co=aHR0cHM6Ly92YXJjb2UubmV0OjQ0Mw..&amp;hl=en&amp;v=lLirU0na9roYU3wDDisGJEVT&amp;size=normal&amp;cb=y3zjaiaf9jcs"></iframe></div><textarea id="g-recaptcha-response" name="g-recaptcha-response" class="g-recaptcha-response" style="width: 250px; height: 40px; border: 1px solid rgb(193, 193, 193); margin: 10px 25px; padding: 0px; resize: none; display: none;"></textarea></div><iframe style="display: none;"></iframe></div>
-                            <input style="display:none !important;" class="form-control d-none" data-recaptcha="true" required="" data-error="Please complete the Captcha">
-                            <div class="help-block with-errors recaptchaerror"></div>
-                        </div>
-                    </div>
 
                     <div class="input-full">
                         <input type="submit" value="Send Now" class="button disabled">
