--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -13,24 +13,10 @@ import WorkPreview from '../components/work-preview.astro';
                     <h1>Don't be shy,<br>talk to me.</h1>
                 </div>
 
-                <form name="contact" method="POST" action="/success" netlify>
-                    <p class="hidden">
-                        <label>
-                            Don't fill this out if you're human: <input name="bot-field" />
-                        </label>
-                    </p>
-                    <p>
-                      <label>Name <input type="text" name="name" id="name" /></label>
-                    </p>
-                    <p>
-                      <label>Email <input type="email" id="email" name="email" /></label>
-                    </p>
-                    <p>
-                      <label>Message <textarea id="message" wrap="soft" name="message" placeholder="your message" required></textarea>
-                    </p>
-                    <p>
-                      <button type="submit">Send</button>
-                    </p>
+                <form data-netlify="true" name="contact" netlify-honeypot="bot-field">
+                    <input type="text" name="username" />
+                    <input type="email" name="email" />
+                    <input name="bot-field" type="hidden" />
                   </form>
 
 
