--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -34,6 +34,27 @@ import WorkPreview from '../components/work-preview.astro';
                     </p>
                   </form>
 
+                  <script>
+const handleSubmit = (event) => {
+  event.preventDefault();
+
+  const myForm = event.target;
+  const formData = new FormData(myForm);
+  
+  fetch("/", {
+    method: "POST",
+    headers: { "Content-Type": "application/x-www-form-urlencoded" },
+    body: new URLSearchParams(formData).toString(),
+  })
+    .then(() => alert("Thank you for your submission"))
+    .catch((error) => alert(error));
+};
+
+document
+  .querySelector("form")
+  .addEventListener("submit", handleSubmit);
+  
+                  </script>
 
             </div> 
 
