--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -13,7 +13,7 @@ import WorkPreview from '../components/work-preview.astro';
                     <h1>Don't be shy,<br>talk to me.</h1>
                 </div>
 
-                <form name="contact" method="POST" data-netlify="true">
+                <form name="contact" method="POST" netlify>
                     <p>
                       <label>Your Name: <input type="text" name="name" /></label>
                     </p>
@@ -34,27 +34,7 @@ import WorkPreview from '../components/work-preview.astro';
                     </p>
                   </form>
 
-                  <script>
-const handleSubmit = (event) => {
-  event.preventDefault();
 
-  const myForm = event.target;
-  const formData = new FormData(myForm);
-  
-  fetch("/", {
-    method: "POST",
-    headers: { "Content-Type": "application/x-www-form-urlencoded" },
-    body: new URLSearchParams(formData).toString(),
-  })
-    .then(() => alert("Thank you for your submission"))
-    .catch((error) => alert(error));
-};
-
-document
-  .querySelector("form")
-  .addEventListener("submit", handleSubmit);
-  
-                  </script>
 
             </div> 
 
