--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -6,40 +6,33 @@ import WorkPreview from '../components/work-preview.astro';
 <Layout title="Varcoe - Get In Touch">
 
 
-
-    <form
-    name="contact"
-    method="POST"
-    netlify-honeypot="bot-field"
-    data-netlify="true"
-  >
-    <p class="hidden">
-      <label>
-        Don’t fill this out if you’re human: <input name="bot-field" />
-      </label>
-    </p>
-    <p>
-      <label>
-        Email: <input type="text" name="email" />
-      </label>
-    </p>
-    <p>
-      <label>
-        Message: <textarea name="message"></textarea>
-      </label>
-    </p>
-    <p>
-      <button type="submit">Send</button>
-    </p>
-  </form>
-
     <section class="contact-box">
         <div class="container">
             <div class="contact-left">
                 <div class="main-intro text-left">
                     <h1>Don't be shy,<br>talk to me.</h1>
                 </div>
-
+                <form
+                name="contact"
+                method="POST"
+                data-netlify-recaptcha="true"
+                data-netlify="true"
+              >
+                <p>
+                  <label>
+                    Email: <input type="text" name="name" />
+                  </label>
+                </p>
+                <p>
+                  <label>
+                    Message: <textarea name="message"></textarea>
+                  </label>
+                </p>
+                <div data-netlify-recaptcha="true"></div>
+                <p>
+                  <button type="submit">Send</button>
+                </p>
+              </form>
 
 
             </div> 
