--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -11,6 +11,26 @@ import WorkPreview from '../components/work-preview.astro';
 		  <h1>Creative solutions that will grow your business!</h1>
 		</div>
 	  </section>
+	  <form
+	  name="contact"
+	  method="POST"
+	  data-netlify="true"
+	>
+	  <p>
+		<label>
+		  Email: <input type="text" name="name" />
+		</label>
+	  </p>
+	  <p>
+		<label>
+		  Message: <textarea name="message"></textarea>
+		</label>
+	  </p>
+	  <div data-netlify-recaptcha="true"></div>
+	  <p>
+		<button type="submit">Send</button>
+	  </p>
+	</form>
   
 	  <section class="work">
 		<div class="container">
