--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -15,6 +15,7 @@ import WorkPreview from '../components/work-preview.astro';
                 <form
                 name="contact"
                 method="POST"
+                action="/"
                 data-netlify="true"
               >
                 <p>
