--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -25,6 +25,8 @@
         </footer>
 
 
+
+        <script src="/js/jquery.fancybox.js" type="text/javascript"></script>
         
 	<script>
 		$('.nav-tabs li').click(function() {
