--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -12,39 +12,51 @@ import WorkPreview from '../components/work-preview.astro';
                 <div class="main-intro text-left">
                     <h1>Don't be shy,<br>talk to me.</h1>
                 </div>
-                <form name="inscription" netlify>
-                    <div class="field">
-                        <label>Nom *</label>
-                        <div class="control">
-                            <input type="text" class="input is-medium" placeholder="Nom" name="firstname" required>
-                        </div>
-                    </div>
-                    <div class="field">
-                        <label>Prénom *</label>
-                        <div class="control">
-                            <input type="text" class="input is-medium" placeholder="Prénom" name="lastname" required>
-                        </div>
-                    </div>
-                    <div class="field">
-                        <label>Adresse email *</label>
-                        <div class="control">
-                            <input type="mail" class="input is-medium" placeholder="Adresse email" name="email" required>
-                        </div>
-                    </div>
-                    <div class="field">
-                        <label>Téléphone</label>
-                        <div class="control">
-                            <input type="tel" class="input is-medium" placeholder="Téléphone" name="phone" minlength="10" >
-                        </div>
-                    </div>
-                    <div class="field">
-                        <label>Société</label>
-                        <div class="control">
-                            <input type="text" class="input is-medium" placeholder="Société" name="company">
-                        </div>
-                    </div>
-                    <input type="submit" class="button is-fullwidth secondary-btn is-rounded" value="Commencer"/>
-                </form>
+
+                <form name="contact-form" data-netlify="true">
+                    <input type="hidden" name="form-name" value="contact-form" />
+                    <div class="messages"></div>
+<div class="form controls">
+                <div class="input-half form-group has-error has-danger">
+                    <label for="form_name">Name</label>
+                        <input type="text" id="form_name" name="name" value="" class="input" required="required" data-error="A name is required." placeholder="Name/Business">
+                </div>
+
+                <div class="input-half form-group" style="float:right;">
+                    <label for="form_email">Email</label>
+                        <input id="form_email" type="email" name="email" value="" class="input" required="required" data-error="Valid email is required." placeholder="Email">
+                </div>
+
+                <div class="input-full form-group">
+                    <label for="form_budgetl">Budget</label>
+                    <select class="select" id="form_budget" name="budget" value="" required="required" data-error="Please choose budget.">
+                        
+                        <option name="budget" value="$2000-2500" selected="selected">$2000-$2500</option>
+                        <option name="budget" value="$3000-5000">$3000-$5000</option>
+                        <option name="budget" value="$5000+">$5000+</option>
+                    </select>
+                
+                </div>
+
+                <script type="text/javascript">
+                    var select = document.getElementById('form-budget');
+                    select.onchange = function() {
+                        select.className = 'selectactive';
+                    }
+                </script>
+
+                <div class="input-full form-group">
+                    <label for="form_message">Message</label>
+                        <textarea id="form_message" name="message" required="required" data-error="Please, leave us a message." class="textarea" placeholder="If you're requesting a quote please try to include as much information as possible about the project."></textarea>
+                </div>
+                
+                <div class="input-full">
+                    <input type="submit" value="Send Now" class="button disabled">
+                </div>
+</div>
+            </form>
+
+
 
             </div> 
 
