--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -19,17 +19,17 @@ import WorkPreview from '../components/work-preview.astro';
 <div class="form controls">
                 <div class="input-half form-group has-error has-danger">
                     <label for="form_name">Name</label>
-                        <input type="text" id="form_name" name="name" value="" class="input" required="required" data-error="A name is required." placeholder="Name/Business">
+                        <input type="text" id="form_name" name="name" value="" class="input" required="required" placeholder="Name/Business">
                 </div>
 
                 <div class="input-half form-group" style="float:right;">
                     <label for="form_email">Email</label>
-                        <input id="form_email" type="email" name="email" value="" class="input" required="required" data-error="Valid email is required." placeholder="Email">
+                        <input id="form_email" type="email" name="email" value="" class="input" required="required" placeholder="Email">
                 </div>
 
                 <div class="input-full form-group">
                     <label for="form_budgetl">Budget</label>
-                    <select class="select" id="form_budget" name="budget" value="" required="required" data-error="Please choose budget.">
+                    <select class="select" id="form_budget" name="budget" value="" required="required">
                         
                         <option name="budget" value="$2000-2500" selected="selected">$2000-$2500</option>
                         <option name="budget" value="$3000-5000">$3000-$5000</option>
@@ -47,7 +47,7 @@ import WorkPreview from '../components/work-preview.astro';
 
                 <div class="input-full form-group">
                     <label for="form_message">Message</label>
-                        <textarea id="form_message" name="message" required="required" data-error="Please, leave us a message." class="textarea" placeholder="If you're requesting a quote please try to include as much information as possible about the project."></textarea>
+                        <textarea id="form_message" name="message" required="required" class="textarea" placeholder="If you're requesting a quote please try to include as much information as possible about the project."></textarea>
                 </div>
                 
                 <div class="input-full">
