--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -16,7 +16,7 @@ import WorkPreview from '../components/work-preview.astro';
                 <h2>Contact Form</h2>
 
                 <h2>Contact Form</h2>
-                <form method="post" name="My Contact Form 7" action="/thankyou.html" id="myForm" netlify ref="formTag" >
+                <form method="post" name="My Contact Form 7" action="/thankyou" id="myForm" netlify ref="formTag" >
                 <p>
                     <label for="name">Name:</label>
                     <input type="text" name="name" id="name" v-model="name">
