--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -13,7 +13,7 @@ import WorkPreview from '../components/work-preview.astro';
                     <h1>Don't be shy,<br>talk to me.</h1>
                 </div>
                 
-                <form name="contact-form" method="POST" data-netlify="true" onSubmit="submit">
+                <form name="contact-form" method="POST" data-netlify="true" onSubmit="submit" netlify>
                     <div class="messages"></div>
                     <div class="form controls">
                         <div class="input-half form-group has-error has-danger">
