--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -64,3 +64,36 @@ import WorkPreview from '../components/work-preview.astro';
     </section>
 
 </Layout>
+
+
+
+<style>
+    .feedback-form {
+    margin: 40px 40px;
+    min-width: 250px;
+    width: 45%;
+  }
+  input,
+  textarea,
+  button {
+    font-size: inherit;
+    margin: 15px 0;
+    padding: 12px 20px;
+    width: 100%;
+  }
+  button {
+    background-color: teal;
+    border: 1px solid black;
+    color: white;
+    width: 50%;
+  }
+  .hidden {
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
+  }
+  </style>
