--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -20,7 +20,7 @@ import WorkPreview from '../components/work-preview.astro';
                       netlify-honeypot
                       name="feedback"
                       method="POST"
-                      action="/success"
+                      action="/thankyou"
                     >
                       <p class="hidden">
                         <label>
