--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -24,7 +24,7 @@ import WorkPreview from '../components/work-preview.astro';
                     >
                       <p class="hidden">
                         <label>
-                          Don’t fill this out if you’re human: <input name="bot-field" />
+                          Don't fill this out if you're human: <input name="bot-field" />
                         </label>
                       </p>
                       <input type="hidden" name="form-name" value="feedback" />
