--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,6 +31,7 @@ import Footer from '../components/footer.astro';
         <link rel='stylesheet' media='only screen and (min-width: 1024px) and (max-width: 1279px)' href='/css/1024.css' />
 
 		
+        <script src="/js/jquery.min.js" type="text/javascript"></script>
         <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700" rel="stylesheet">
 	</head>
 
