--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -13,6 +13,18 @@ import WorkPreview from '../components/work-preview.astro';
         </div>
     </section>
     
+    <form name="contact" netlify>
+        <p>
+          <label>Name <input type="text" name="name" /></label>
+        </p>
+        <p>
+          <label>Email <input type="email" name="email" /></label>
+        </p>
+        <p>
+          <button type="submit">Send</button>
+        </p>
+      </form>
+
     <section class="about-row">
         <div class="container">
             <div class="one-third">
