--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -15,26 +15,19 @@ import Layout from '../layouts/Layout.astro';
 
                 <div class="feedback-form">
                     <form
-                      netlify
-                      netlify-honeypot
-                      name="feedback"
-                      method="POST"
-                      action="/thankyou"
-                    >
-                      <p class="hidden">
-                        <label>
-                          Don't fill this out if you're human: <input name="bot-field" />
-                        </label>
-                      </p>
-                      <input type="hidden" name="form-name" value="feedback" />
-                      <label for="name">Name</label>
-                      <input id="name" type="text" name="name" />
-                      <label for="email">Email</label>
-                      <input id="email" type="email" name="email" required />
-                      <label for="feedback">What is your feedback?</label>
-                      <textarea id="feedback" wrap="soft" name="feedback" required></textarea>
-                      <button type="submit">Submit</button> 
-                    </form> 
+                    name="contact"
+                    data-netlify="true"
+                    data-netlify-honeypot="bot-field"
+                >
+                  <input type="text" name="name" id="formName" >
+                  <input type="email" name="email" id="formEmail">
+                  <textare
+                    id="formMessage"
+                    name="message"
+                  ></textarea>
+                
+                  <input type="hidden" name="form-name" value="contact" />
+                </form>
                 </div>
 
 
