--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -27,7 +27,7 @@ import Layout from '../layouts/Layout.astro';
                  class="form-control" 
                  name="name" 
                  id="name" 
-                 placeholder={t("contact.name")} 
+                 placeholder="name"
                  required 
                /> 
              </div> 
@@ -39,7 +39,7 @@ import Layout from '../layouts/Layout.astro';
                  class="form-control" 
                  name="email" 
                  id="email" 
-                 placeholder={t("contact.email")} 
+                 placeholder="email""
                  required 
                /> 
              </div> 
@@ -49,12 +49,12 @@ import Layout from '../layouts/Layout.astro';
                <textarea 
                  class="form-control" 
                  name="message" 
-                 placeholder={t("contact.message")} 
+                 placeholder="message"
                  required></textarea> 
              </div> 
            </div> 
            <p id="submitBtn"> 
-             <button type="submit">{t("contact.submitBtn")}</button> 
+             <button type="submit">submit</button> 
            </p> 
          </form>
                 </div>
