--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import FeedbackForm from '../components/FeedbackForm.astro';
 ---
 
 <Layout title="Varcoe - Get In Touch">
@@ -14,49 +15,8 @@ import Layout from '../layouts/Layout.astro';
                 
 
                 <div class="feedback-form">
-        <form 
-           name="contact" 
-           method="POST" 
-           id="my-contact-form" 
-           data-netlify="true" 
-         > 
-           <div class="flex flex-wrap"> 
-             <div class="col-span-12 grow form-group mb-2"> 
-               <input 
-                 type="text" 
-                 class="form-control" 
-                 name="name" 
-                 id="name" 
-                 placeholder="name"
-                 required 
-               /> 
-             </div> 
-           </div> 
-           <div class="flex flex-wrap"> 
-             <div class="col-span-12 grow form-group mb-2"> 
-               <input 
-                 type="email" 
-                 class="form-control" 
-                 name="email" 
-                 id="email" 
-                 placeholder="email""
-                 required 
-               /> 
-             </div> 
-           </div> 
-           <div class="flex flex-wrap"> 
-             <div class="col-span-12 grow form-group mb-2"> 
-               <textarea 
-                 class="form-control" 
-                 name="message" 
-                 placeholder="message"
-                 required></textarea> 
-             </div> 
-           </div> 
-           <p id="submitBtn"> 
-             <button type="submit">submit</button> 
-           </p> 
-         </form>
+       
+    <FeedbackForm />
                 </div>
 
 
