--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,6 +1,5 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import FeedbackForm from '../components/FeedbackForm.astro';
 ---
 
 <Layout title="Varcoe - Get In Touch">
@@ -15,8 +14,29 @@ import FeedbackForm from '../components/FeedbackForm.astro';
                 
 
                 <div class="feedback-form">
-       
-    <FeedbackForm />
+                    <div class="feedback-form">
+                        <form
+                          netlify
+                          netlify-honeypot
+                          name="feedback"
+                          method="POST"
+                          action="/success"
+                        >
+                          <p class="hidden">
+                            <label>
+                              Don’t fill this out if you’re human: <input name="bot-field" />
+                            </label>
+                          </p>
+                          <input type="hidden" name="form-name" value="feedback" />
+                          <label for="name">Name</label>
+                          <input id="name" type="text" name="name" />
+                          <label for="email">Email</label>
+                          <input id="email" type="email" name="email" required />
+                          <label for="feedback">What is your feedback?</label>
+                          <textarea id="feedback" wrap="soft" name="feedback" required></textarea>
+                          <button type="submit">Submit</button>
+                        </form>
+                    </div>
                 </div>
 
 
