--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -4,10 +4,10 @@
                 <nav class="main-navigation">
                     <ul>
                         <li><a href="/">Work</a></li>
-                        <li><a href="services">Services</a></li>
+                        <li><a href="/services">Services</a></li>
                         <li><a href="https://varcoe.net/blog/">Blog</a></li>
-                        <li><a href="about">About</a></li>
-                        <li><a href="contact">Contact</a></li>
+                        <li><a href="/about">About</a></li>
+                        <li><a href="/contact">Contact</a></li>
                     </ul>
                 </nav>
 
@@ -22,10 +22,10 @@
                   <nav class="overlay-menu">
                     <ul>
                         <li><a href="/">Work</a></li>
-                        <li><a href="services">Services</a></li>
+                        <li><a href="/services">Services</a></li>
                         <li><a href="https://varcoe.net/blog/">Blog</a></li>
-                        <li><a href="about">About</a></li>
-                        <li><a href="contact">Contact</a></li>
+                        <li><a href="/about">About</a></li>
+                        <li><a href="/contact">Contact</a></li>
                     </ul>
                   </nav>
                     <div class="email">
