--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -7,41 +7,65 @@ import Layout from '../layouts/Layout.astro';
 
     <section class="contact-box">
         <div class="container">
+
             <div class="contact-left">
                 <div class="main-intro text-left">
-                    <h1>Don't be shy,<br>talk to me.</h1>
+                    <h1>Don’t be shy,<br>talk to me.</h1>
                 </div>
-                
+                <form
+                  netlify
+                  netlify-honeypot
+                  name="feedback"
+                  method="POST"
+                  action="/success"
+                >
+                <p class="hidden">
+                  <label>
+                    Don’t fill this out if you’re human: <input name="bot-field" />
+                  </label>
+                </p>
+                <input type="hidden" name="form-name" value="feedback" />
+                        <div class="messages"></div>
+                    <div class="form controls">
+                    <div class="input-half form-group">
+                        <label for="form_name">Name</label>
+                        <input type="text" id="form_name" name="name" value="" class="input" required="required" data-error="A name is required." placeholder="Name/Business">
+                    </div>
 
-                <div class="feedback-form">
-                    <div class="feedback-form">
-                        <form
-                          netlify
-                          netlify-honeypot
-                          name="feedback"
-                          method="POST"
-                          action="/success"
-                        >
-                          <p class="hidden">
-                            <label>
-                              Don’t fill this out if you’re human: <input name="bot-field" />
-                            </label>
-                          </p>
-                          <input type="hidden" name="form-name" value="feedback" />
-                          <label for="name">Name</label>
-                          <input id="name" type="text" name="name" />
-                          <label for="email">Email</label>
-                          <input id="email" type="email" name="email" required />
-                          <label for="feedback">What is your feedback?</label>
-                          <textarea id="feedback" wrap="soft" name="feedback" required></textarea>
-                          <button type="submit">Submit</button>
-                        </form>
+                    <div class="input-half form-group" style="float:right;">
+                        <label for="form_email">Email</label>
+                            <input id="form_email" type="email" name="email" value="" class="input" required="required" data-error="Valid email is required." placeholder="Email">
+                    </div>
+
+                    <div class="input-full form-group">
+                        <label for="form_budgetl">Budget</label>
+                        <select class="select" id="form_budget" name="budget" value="" required="required" data-error="Please choose budget.">
+                            <option name="budget" value="$2000-2500" selected="selected">$2000-$2500</option>
+                            <option name="budget" value="$3000-5000">$3000-$5000</option>
+                            <option name="budget" value="$5000+">$5000+</option>
+                        </select>
+                    </div>
+
+                    <script type="text/javascript">
+                        var select = document.getElementById('form-budget');
+                        select.onchange = function() {
+                            select.className = 'selectactive';
+                        }
+                    </script>
+
+                    <div class="input-full form-group">
+                        <label for="form_message">Message</label>
+                        <textarea id="form_message" name="message" required="required" data-error="Please, leave us a message." class="textarea" placeholder="If you're requesting a quote please try to include as much information as possible about the project."></textarea>
+                    </div>
+
+                    <div class="input-full">
+                        <button type="submit" class="button submitbutton">Submit</button>
                     </div>
                 </div>
+                </form>
 
 
-
-            </div> 
+            </div>
 
             <div class="one-third">
                 <ul>
