--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -93,25 +93,9 @@ import Layout from '../layouts/Layout.astro';
 
 
 <style>
-    .feedback-form {
-    margin: 40px 40px;
-    min-width: 250px;
-    width: 45%;
-  }
-  input,
-  textarea,
-  button {
-    font-size: inherit;
-    margin: 15px 0;
-    padding: 12px 20px;
-    width: 100%;
-  }
-  button {
-    background-color: teal;
-    border: 1px solid black;
-    color: white;
-    width: 50%;
-  }
+    .submitbutton {
+        border:0px;
+    }
   .hidden {
     clip: rect(0 0 0 0);
     clip-path: inset(50%);
