--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -28,7 +28,7 @@
 
         <script src="/js/jquery.fancybox.js" type="text/javascript"></script>
         
-	<script>
+	<script type="text/javascript">
 		$('.nav-tabs li').click(function() {
 			$('.nav-tabs .active').removeClass('active');
 	  		$(this).toggleClass('active');
