contact layout fix?

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,8 +1,8 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import Layout from '../layouts/ContactLayout.astro';
 ---
 
-<Layout title="Varcoe - Get In Touch">
+<ContactLayout title="Varcoe - Get In Touch">
 
 
     <section class="contact-box">
