--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '../layouts/ContactLayout.astro';
+import ContactLayout from '../layouts/ContactLayout.astro';
 ---
 
 <ContactLayout title="Varcoe - Get In Touch">
