--- a/src/pages/success.astro
+++ b/src/pages/success.astro
@@ -1,17 +1,60 @@
 ---
-import Layout from '../layouts/Layout.astro';
+import ContactLayout from '../layouts/ContactLayout.astro';
 ---
 
-<Layout title="Astro Toolbox">
-    <div class="container">
-        <main>
-          <h1>Submission Received!</h1>
-          <p>Thank you for your feedback! Head back to the <a href="/">home page</a>.</p>
-        </main>
-    </div>
-</Layout>
+<ContactLayout title="Varcoe - Message Sent!"">
+
+
+    <section class="contact-box">
+        <div class="container">
+
+            <div class="contact-left">
+                <div class="main-intro text-left">
+                    <h1>I've got your message!</h1>
+                    <h3>I'll get back to you as soon as possible.</h3>
+                    <p>Feel free to reach out on discord or skype listed on the right.</p>
+                </div>
+                
+
+
+            </div>
+
+            <div class="one-third">
+                <ul>
+                    <li><img src="img/email.png" alt="Email" width="48" height="48">
+                        <h4><span>Direct Email</span><a href="mailto:korey@varcoe.net">korey@varcoe.net</a></h4>
+                    </li>
+                    <li><img src="img/skype.png" alt="Skype" width="48" height="48">
+                        <h4><span>Skype</span><a href="skype:varcoedesign?chat">varcoedesign</a></h4>
+                    </li>
+
+                    <li><img src="img/discord.png" alt="Skype" width="48" height="48">
+                        <h4><span>Discord</span><a href="skype:varcoedesign?chat">varcoenet</a></h4>
+                    </li>
+
+                </ul>
+            </div>
+
+            <div class="clearfix"></div>
+            <a href="/" class="logofooter"></a>
+        </div>
+    </section>
+
+</ContactLayout>
+
+
+
 <style>
-  html {
-    margin: 0 30px;
+    .submitbutton {
+        border:0px;
+    }
+  .hidden {
+    clip: rect(0 0 0 0);
+    clip-path: inset(50%);
+    height: 1px;
+    overflow: hidden;
+    position: absolute;
+    white-space: nowrap;
+    width: 1px;
   }
-</style>
+  </style>
