--- a/src/pages/success.astro
+++ b/src/pages/success.astro
@@ -2,7 +2,7 @@
 import ContactLayout from '../layouts/ContactLayout.astro';
 ---
 
-<ContactLayout title="Varcoe - Message Sent!"">
+<ContactLayout title="Varcoe - Success">
 
 
     <section class="contact-box">
