--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -17,7 +17,7 @@ import ContactLayout from '../layouts/ContactLayout.astro';
                   netlify-honeypot
                   name="feedback"
                   method="POST"
-                  action="/success"
+                  action="/thankyou"
                 >
                 <p class="hidden">
                   <label>
