--- a/src/pages/thankyou.astro
+++ b/src/pages/thankyou.astro
@@ -19,10 +19,10 @@ import ContactLayout from '../layouts/ContactLayout.astro';
 
           </div>
 
-          <div class="one-third">
+          <div class="one-third" style="margin-top:210px;">
               <ul>
                   <li><img src="img/email.png" alt="Email" width="48" height="48">
-                      <h4><span>Direct Email</span><a href="mailto:korey@varcoe.net">korey@varcoe.net</a></h4>
+                      <h4><span>Direct Email</span><a href="#">korey@varcoe.net</a></h4>
                   </li>
                   <li><img src="img/skype.png" alt="Skype" width="48" height="48">
                       <h4><span>Skype</span><a href="skype:varcoedesign?chat">varcoedesign</a></h4>
