--- a/src/pages/thankyou.astro
+++ b/src/pages/thankyou.astro
@@ -11,7 +11,7 @@ import ContactLayout from '../layouts/ContactLayout.astro';
           <div class="contact-left">
               <div class="main-intro text-left">
                   <h1>I've got your message!</h1>
-                  <h3>I'll get back to you as soon as possible.</h3>
+                  <h3 style="margin-top:15px;color: #550ddd;">I'll get back to you as soon as possible.</h3>
                   <p>Feel free to reach out on discord or skype listed on the right.</p>
               </div>
               
