--- a/src/pages/thankyou.astro
+++ b/src/pages/thankyou.astro
@@ -28,8 +28,8 @@ import ContactLayout from '../layouts/ContactLayout.astro';
                       <h4><span>Skype</span><a href="skype:varcoedesign?chat">varcoedesign</a></h4>
                   </li>
 
-                  <li><img src="img/discord.png" alt="Skype" width="48" height="48">
-                      <h4><span>Discord</span><a href="skype:varcoedesign?chat">varcoenet</a></h4>
+                  <li><img src="img/discord.png" alt="Discord" width="48" height="48">
+                    <h4><span>Discord</span><a href="javascript:void(0)">varcoenet</a></h4>
                   </li>
 
               </ul>
